changed the error message color into bootstrap text-danger color category list spacing corrected
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@33148 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/themes/standard_4_0/style.css
+++ b/themes/standard_4_0/style.css
@@ -547,7 +547,7 @@
         height: auto;
     }
     .fields .selectorCenter{
-        padding: 20px 10px 20px;
+        padding: 20px 10px 5px;
         float: none;
         height: auto;
     }
